<resources>
    <string name="app_name" translatable="false">STEX</string>
    <string name="app_motto">Invest in any business worldwide with STEX</string>
    <string name="wallets">Wallets</string>
    <string name="orders">Orders</string>
    <string name="deposits">Deposits</string>
    <string name="withdrawals">Withdrawals</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="help">Help</string>
    <string name="share_the_app">Share the app</string>
    <string name="favorites">Favorites</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="action_share_via">Share via…</string>
    <string name="action_copy_link">Copy link</string>
    <string name="action_buy">Buy</string>
    <string name="action_sell">Sell</string>
    <string name="action_ask">Ask</string>
    <string name="action_bid">Bid</string>
    <string name="action_deposit">Deposit</string>
    <string name="action_withdraw">Withdraw</string>
    <string name="action_spent">Spent</string>
    <string name="action_received">Received</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_show_empty_wallets">Show Empty Wallets</string>
    <string name="action_hide_empty_wallets">Hide Empty Wallets</string>
    <string name="action_use_pin">Use Pin</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="trade">Trade</string>
    <string name="trade_type_buy">BUY</string>
    <string name="trade_type_sell">SELL</string>
    <string name="state_active">Active</string>
    <string name="state_disabled">Disabled</string>
    <string name="transaction_status_finished">FINISHED</string>
    <string name="transaction_status_awaiting_confirmations">AWAITING CONFIRMATIONS</string>
    <string name="transaction_status_email_sent">EMAIL SENT</string>
    <string name="transaction_status_cancelled_by_user">CANCELLED BY USER</string>
    <string name="transaction_status_awaiting_approval">AWAITING APPROVAL</string>
    <string name="transaction_status_approved">APPROVED</string>
    <string name="transaction_status_not_confirmed">NOT CONFIRMED</string>
    <string name="transaction_status_processing">PROCESSING</string>
    <string name="transaction_status_withdrawal_error">WITHDRAWAL ERROR</string>
    <string name="transaction_status_cancelled_by_admin">CANCELLED BY ADMIN</string>
    <string name="last_price">Last Price</string>
    <string name="at_price">At Price</string>
    <string name="fee">Fee</string>
    <string name="address">Address</string>
    <string name="id">ID</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="amount">Amount</string>
    <string name="price">Price</string>
    <string name="time">Time</string>
    <string name="income">Income</string>
    <string name="date">Date</string>
    <string name="your_balance">Your Balance</string>
    <string name="status">Status</string>
    <string name="base_currency">Base Currency</string>
    <string name="quote_currency">Quote Currency</string>
    <string name="daily_min_price">24hr Min Price</string>
    <string name="daily_max_price">24hr Max Price</string>
    <string name="daily_change">24hr Change</string>
    <string name="daily_volume">24hr Volume</string>
    <string name="buy_fee_percent">Buy Fee</string>
    <string name="sell_fee_percent">Sell Fee</string>
    <string name="available_balance">Available Balance</string>
    <string name="balance_in_orders">Balance In Orders</string>
    <string name="search_deposits">Search deposits</string>
    <string name="search_withdrawals">Search withdrawals</string>
    <string name="deposit_address">Deposit Address</string>
    <string name="public_key">Public Key</string>
    <string name="secret_key">Secret Key</string>
    <string name="payment_id">Payment ID</string>
    <string name="destination_tag">Destination Tag</string>
    <string name="account">Account</string>
    <string name="general">General</string>
    <string name="data_streaming">Data Streaming</string>
    <string name="stream_real_time_data">Stream real-time data</string>
    <string name="appearance">Appearance</string>
    <string name="animate_charts">Animate charts</string>
    <string name="bullish_candle_stick_style">Bullish candle stick style</string>
    <string name="bearish_candle_stick_style">Bearish candle stick style</string>
    <string name="zoom_in_on_the_price_chart">Zoom in on the price chart</string>
    <string name="depth_chart_line_style">Depth chart line style</string>
    <string name="highlight_orderbook_real_time_updates">Highlight orderbook real-time updates</string>
    <string name="highlight_new_trades_real_time_addition">Highlight real-time addition of new trades</string>
    <string name="formatting">Formatting</string>
    <string name="notifications">Notifications</string>
    <string name="debug" translatable="false">Debug</string>
    <string name="grouping">Grouping</string>
    <string name="grouping_separator">Grouping separator</string>
    <string name="decimal_separator">Decimal separator</string>
    <string name="theme">Theme</string>
    <string name="themes">Themes</string>
    <string name="restore_defaults">Restore Defaults</string>
    <string name="change_pin">Change PIN</string>
    <string name="fingerprint_unlock">Fingerprint Unlock</string>
    <string name="force_authentication_on_app_startup">Force authentication on app startup</string>
    <string name="authentication_session_duration">Authentication Session Duration</string>
    <string name="sounds">Sounds</string>
    <string name="vibration">Vibration</string>
    <string name="phone_led">Phone LED</string>
    <string name="notification_ringtone">Notification ringtone</string>
    <string name="device_metrics" translatable="false">Device metrics</string>
    <string name="device_metrics_description" translatable="false">Shows device specific metrics for debugging</string>
    <string name="volume_template">Vol %s</string>
    <string name="sign_out_template">Sign out of @%s</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="ringtones">Ringtones</string>
    <string name="note">Note</string>
    <string name="app_sharing_template">I\'m using STEX for trading cryptocurrencies! Try it out for yourself: %s</string>
    <string name="period">Period</string>
    <string name="comma">Comma</string>
    <string name="twitter" translatable="false">Twitter</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="telegram" translatable="false">Telegram</string>
    <string name="solid">Solid</string>
    <string name="hollow">Hollow</string>
    <string name="linear">Linear</string>
    <string name="stepped">Stepped</string>
    <string name="price_unavailable">Unavailable</string>
    <string name="volume_unavailable">Unavailable</string>
    <string name="time_period_fifteen_seconds" translatable="false">15 seconds (for debugging only)</string>
    <string name="time_period_five_minutes">5 minutes</string>
    <string name="time_period_ten_minutes">10 minutes</string>
    <string name="time_period_fifteen_minutes">15 minutes</string>
    <string name="time_period_thirty_minutes">30 minutes</string>
    <string name="time_period_forty_five_minutes">45 minutes</string>
    <string name="time_period_one_hour">1 hour</string>
    <string name="time_period_two_hours">2 hours</string>
    <string name="time_period_three_hours">3 hours</string>
    <string name="time_period_six_hours">6 hours</string>
    <string name="time_period_nine_hours">9 hours</string>
    <string name="time_period_twelve_hours">12 hours</string>
    <string name="candle_stick_style_solid" translatable="false">@string/solid</string>
    <string name="candle_stick_style_hollow" translatable="false">@string/hollow</string>
    <string name="depth_chart_line_style_linear" translatable="false">@string/linear</string>
    <string name="depth_chart_line_style_stepped" translatable="false">@string/stepped</string>
    <string name="decimal_separator_period" translatable="false">@string/period</string>
    <string name="decimal_separator_comma" translatable="false">@string/comma</string>
    <string name="grouping_separator_period" translatable="false">@string/period</string>
    <string name="grouping_separator_comma" translatable="false">@string/comma</string>
    <string name="grouping_separator_space">Space</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="order_created">The order has been successfully created!</string>
    <string name="order_cancelled">The order has been successfully cancelled!</string>
    <string name="qr_code_image_downloaded">The image has been successfully saved!</string>
    <string name="market_not_found">Could not find the specified market!</string>
    <string name="pin_code_changed">The PIN code has been changed successfully!</string>
    <string name="shortcut_wallets_short_label" translatable="false">@string/wallets</string>
    <string name="shortcut_wallets_long_label" translatable="false">@string/wallets</string>
    <string name="shortcut_orders_short_label" translatable="false">@string/orders</string>
    <string name="shortcut_orders_long_label" translatable="false">@string/orders</string>
    <string name="shortcut_favorite_markets_short_label">Favorite Markets</string>
    <string name="shortcut_favorite_markets_long_label" translatable="false">@string/shortcut_favorite_markets_short_label</string>
    <string name="shortcut_search_markets_short_label">Search Markets</string>
    <string name="shortcut_search_markets_long_label" translatable="false">@string/shortcut_search_markets_short_label</string>
    <string name="login_email_edit_text_hint">Email</string>
    <string name="login_password_edit_text_hint">Password</string>
    <string name="login_code_edit_text_hint">Code</string>
    <string name="login_help_button_text">Forgot your password?</string>
    <string name="login_register_button_text">Don\'t have an account yet?</string>
    <string name="login_confirmation_email_hint">
        We sent you a one-time code to your email. Please check the inbox to get the code to enter below. Be sure to check
        the spam folder if you can\'t see our email.
    </string>
    <string name="login_confirmation_2fa_help_button_text">
        I\'ve lost my device and want to disable the two-factor authentication?
    </string>
    <string name="currency_market_preview_chart_types_sov_left_option_title_text">Price chart</string>
    <string name="currency_market_preview_chart_types_sov_right_option_title_text">Depth chart</string>
    <string name="currency_market_preview_market_info_text">Market Info</string>
    <string name="currency_market_preview_trade_info_sov_left_option_title_text">Orderbook</string>
    <string name="currency_market_preview_trade_info_sov_right_option_title_text">Trades</string>
    <string name="depth_chart_info_price">Price:</string>
    <string name="depth_chart_info_amount">Amount:</string>
    <string name="depth_chart_info_volume">Volume:</string>
    <string name="depth_chart_info_highest_bid">Highest Bid:</string>
    <string name="depth_chart_info_lowest_ask">Lowest Ask:</string>
    <string name="depth_chart_info_spread">Spread:</string>
    <string name="credentials_input_dialog_title">Credentials Input</string>
    <string name="credentials_input_dialog_subtitle">Please enter public and secret keys below</string>
    <string name="credentials_input_dialog_public_key_et_hint_text" translatable="false">@string/public_key</string>
    <string name="credentials_input_dialog_secret_key_et_hint_text" translatable="false">@string/secret_key</string>
</resources>