<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:orientation="vertical"
    tools:parentTag="android.widget.LinearLayout">

    <EditText
        android:id="@+id/emailEt"
        android:hint="@string/login_email_edit_text_hint"
        android:inputType="textEmailAddress"
        tools:textColor="@color/white"
        tools:textColorHint="@color/colorLoginEditTextHintColor"
        style="@style/LoginEditText"/>

    <EditText
        android:id="@+id/passwordEt"
        android:layout_marginTop="@dimen/login_credentials_view_password_et_top_margin"
        android:hint="@string/login_password_edit_text_hint"
        android:inputType="textPassword"
        tools:textColor="@color/white"
        tools:textColorHint="@color/colorLoginEditTextHintColor"
        style="@style/LoginEditText"/>

    <TextView
        android:id="@+id/helpBtnTv"
        android:layout_marginTop="@dimen/login_credentials_view_help_text_view_vertical_margin"
        android:text="@string/login_help_button_text"
        tools:textColor="@color/white"
        style="@style/LoginHelpButton"/>

    <TextView
        android:id="@+id/registerBtnTv"
        android:text="@string/login_register_button_text"
        tools:textColor="@color/white"
        style="@style/LoginHelpButton"/>

</merge>