<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    app:cardElevation="@dimen/dialog_card_view_elevation"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="@color/deepTealPrimaryColor"
    style="@style/DialogCardView">

    <RelativeLayout
        style="@style/DialogContentContainer">

        <RelativeLayout
            style="@style/DialogMainContainer">

            <TextView
                android:id="@+id/titleTv"
                android:layout_alignParentTop="true"
                android:text="@string/credentials_input_dialog_title"
                tools:textColor="@color/deepTealPrimaryTextColor"
                style="@style/DialogTitle"/>

            <TextView
                android:id="@+id/subtitleTv"
                android:layout_below="@id/titleTv"
                android:text="@string/credentials_input_dialog_subtitle"
                tools:textColor="@color/deepTealPrimaryTextColor"
                style="@style/DialogSubtitle"/>

            <EditText
                android:id="@+id/publicKeyEt"
                android:layout_below="@id/subtitleTv"
                android:layout_marginTop="@dimen/credentials_dialog_public_key_et_margin_top"
                android:hint="@string/credentials_input_dialog_public_key_et_hint_text"
                android:imeOptions="flagNoExtractUi|actionNext"
                tools:textColor="@color/deepTealPrimaryTextColor"
                tools:textColorHint="@color/deepTealPrimaryDarkTextColor"
                tools:backgroundTint="@color/deepTealPrimaryTextColor"
                style="@style/CredentialsDialogEditText"/>

            <EditText
                android:id="@+id/secretKeyEt"
                android:layout_below="@id/publicKeyEt"
                android:hint="@string/credentials_input_dialog_secret_key_et_hint_text"
                android:imeOptions="flagNoExtractUi|actionDone"
                tools:textColor="@color/deepTealPrimaryTextColor"
                tools:textColorHint="@color/deepTealPrimaryDarkTextColor"
                tools:backgroundTint="@color/deepTealPrimaryTextColor"
                style="@style/CredentialsDialogEditText"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/cancelBtnTv"
            android:layout_below="@id/mainContainerRl"
            android:layout_toLeftOf="@+id/okBtnTv"
            android:layout_toStartOf="@+id/okBtnTv"
            android:text="@string/action_cancel"
            tools:textColor="@color/deepTealAccentColor"
            style="@style/DialogButton"/>

        <TextView
            android:id="@+id/okBtnTv"
            android:layout_below="@id/mainContainerRl"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/ok"
            tools:textColor="@color/deepTealAccentColor"
            style="@style/DialogButton"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>