<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:orientation="vertical"
    tools:parentTag="android.widget.LinearLayout">

    <TextView
        android:id="@+id/hintTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/login_confirmation_view_hint_vertical_margin"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textSize="@dimen/login_confirmation_view_hint_text_size"
        tools:text="@string/login_confirmation_email_hint"
        tools:textColor="@color/white"/>

    <EditText
        android:id="@+id/codeEt"
        android:hint="@string/login_code_edit_text_hint"
        android:inputType="textEmailAddress"
        tools:textColor="@color/white"
        tools:textColorHint="@color/colorLoginEditTextHintColor"
        style="@style/LoginEditText"/>

    <TextView
        android:id="@+id/helpBtnTv"
        android:layout_marginTop="@dimen/login_confirmation_view_help_button_top_margin"
        android:text="@string/login_confirmation_2fa_help_button_text"
        tools:textColor="@color/white"
        style="@style/LoginHelpButton"/>

</merge>