<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:parentTag="android.widget.FrameLayout">

    <LinearLayout
        android:id="@+id/mainContainerLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/market_details_view_padding"
        android:orientation="vertical">

        <com.stocksexchange.android.ui.views.DottedMapView
            android:id="@+id/statusDmv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/market_details_view_dmv_bottom_margin"
            app:title="@string/status"
            app:titleSize="@dimen/market_details_view_dmv_text_size"
            app:valueSize="@dimen/market_details_view_dmv_text_size"
            tools:titleColor="@color/deepTealDottedMapViewTextColor"
            tools:valueColor="@color/colorGreenAccent"
            tools:separatorColor="@color/deepTealDottedMapViewTextColor"
            tools:value="Active"/>

        <com.stocksexchange.android.ui.views.DottedMapView
            android:id="@+id/baseCurrencyDmv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/market_details_view_dmv_bottom_margin"
            app:title="@string/base_currency"
            app:titleSize="@dimen/market_details_view_dmv_text_size"
            app:valueSize="@dimen/market_details_view_dmv_text_size"
            tools:titleColor="@color/deepTealDottedMapViewTextColor"
            tools:valueColor="@color/deepTealDottedMapViewTextColor"
            tools:separatorColor="@color/deepTealDottedMapViewTextColor"
            tools:value="Ethereum"/>

        <com.stocksexchange.android.ui.views.DottedMapView
            android:id="@+id/quoteCurrencyDmv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/market_details_view_dmv_bottom_margin"
            app:title="@string/quote_currency"
            app:titleSize="@dimen/market_details_view_dmv_text_size"
            app:valueSize="@dimen/market_details_view_dmv_text_size"
            tools:titleColor="@color/deepTealDottedMapViewTextColor"
            tools:valueColor="@color/deepTealDottedMapViewTextColor"
            tools:separatorColor="@color/deepTealDottedMapViewTextColor"
            tools:value="Bitcoin"/>

        <com.stocksexchange.android.ui.views.DottedMapView
            android:id="@+id/dailyMinPriceDmv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/market_details_view_dmv_bottom_margin"
            app:title="@string/daily_min_price"
            app:titleSize="@dimen/market_details_view_dmv_text_size"
            app:valueSize="@dimen/market_details_view_dmv_text_size"
            tools:titleColor="@color/deepTealDottedMapViewTextColor"
            tools:valueColor="@color/deepTealDottedMapViewTextColor"
            tools:separatorColor="@color/deepTealDottedMapViewTextColor"
            tools:value="0.02748134"/>

        <com.stocksexchange.android.ui.views.DottedMapView
            android:id="@+id/dailyMaxPriceDmv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/market_details_view_dmv_bottom_margin"
            app:title="@string/daily_max_price"
            app:titleSize="@dimen/market_details_view_dmv_text_size"
            app:valueSize="@dimen/market_details_view_dmv_text_size"
            tools:titleColor="@color/deepTealDottedMapViewTextColor"
            tools:valueColor="@color/deepTealDottedMapViewTextColor"
            tools:separatorColor="@color/deepTealDottedMapViewTextColor"
            tools:value="0.02862989"/>

        <com.stocksexchange.android.ui.views.DottedMapView
            android:id="@+id/dailyVolumeDmv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/market_details_view_dmv_bottom_margin"
            app:title="@string/daily_volume"
            app:titleSize="@dimen/market_details_view_dmv_text_size"
            app:valueSize="@dimen/market_details_view_dmv_text_size"
            tools:titleColor="@color/deepTealDottedMapViewTextColor"
            tools:valueColor="@color/deepTealDottedMapViewTextColor"
            tools:separatorColor="@color/deepTealDottedMapViewTextColor"
            tools:value="1457.72 ETH"/>

        <com.stocksexchange.android.ui.views.DottedMapView
            android:id="@+id/buyFeeDmv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/market_details_view_dmv_bottom_margin"
            app:title="@string/buy_fee_percent"
            app:titleSize="@dimen/market_details_view_dmv_text_size"
            app:valueSize="@dimen/market_details_view_dmv_text_size"
            tools:titleColor="@color/deepTealDottedMapViewTextColor"
            tools:valueColor="@color/deepTealDottedMapViewTextColor"
            tools:separatorColor="@color/deepTealDottedMapViewTextColor"
            tools:value="0.05%"/>

        <com.stocksexchange.android.ui.views.DottedMapView
            android:id="@+id/sellFeeDmv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/sell_fee_percent"
            app:titleSize="@dimen/market_details_view_dmv_text_size"
            app:valueSize="@dimen/market_details_view_dmv_text_size"
            tools:titleColor="@color/deepTealDottedMapViewTextColor"
            tools:valueColor="@color/deepTealDottedMapViewTextColor"
            tools:separatorColor="@color/deepTealDottedMapViewTextColor"
            tools:value="0.05%"/>

    </LinearLayout>

</merge>